<resources>
  <string name="app_name" translatable="false">AMAPI Extensibility Demo</string>

  <string name="clear_app_name_hint" description="Input text field of package data to be cleared. [CHAR LIMIT=NONE]">Clear app package name</string>
  <string name="clear_app_button" description="Button text for app data to be cleared. [CHAR LIMIT=NONE]">Clear app data</string>
  <string name="command_id_hint" description="Input text field of command ID. [CHAR LIMIT=NONE]">Command Id</string>
  <string name="get_command_button" description="Button text for command to be fetched. [CHAR LIMIT=NONE]">Get command</string>

  <string name="device_info" description="Device info label. [CHAR LIMIT=NONE]">Device Info</string>
  <string name="issue_request_device_info_command" description="Issue Request Device info button text. [CHAR LIMIT=NONE]">Issue Request Device Info Command</string>
  <string name="request_device_info_title" description="Request Device Info Title. [CHAR LIMIT=NONE]">Request Device Info</string>
  <string name="device_info_placeholder" description="Device info placeholder. [CHAR LIMIT=NONE]">e.g., EID</string>
  
  <string name="license_button_txt" description="See licenses button text. [CHAR LIMIT=NONE]">See Licenses</string>
  <string name="local_commands" description="Title of the button to navigate to local commands screen [CHAR LIMIT=NONE]">Local Commands</string>
  <string name="custom_app" description="Title of the button to navigate to Custom App commands screen [CHAR LIMIT=NONE]">Custom Apps (Package Installer)</string>
  <string name="command_id" description="Id of the command [CHAR LIMIT=NONE]">Command Id</string>
  <string name="get_command" description="Label of the button to get the command [CHAR LIMIT=NONE]">Get Command</string>
  <string name="package_name" description="Package name of the application to which command should be applied [CHAR LIMIT=NONE]">Package Name</string>
  <string name="issue_clear_app_data_command" description="Label of the button to issue the command [CHAR LIMIT=NONE]">Issue Clear App Data Command</string>
  <string translatable="false" name="clouddpc_package_name">com.google.android.apps.work.clouddpc</string>
  <string translatable="false" name="clouddpc_receiver_class_name">com.google.android.apps.work.clouddpc.receivers.CustomAppBroadcastReceiver</string>
  <string translatable="false" name="clouddpc_provide_uri_action">com.google.android.apps.work.clouddpc.ACTION_PROVIDE_CUSTOM_APP_URI</string>
  <string translatable="false" name="file_provider_authority">com.google.android.apps.work.clouddpc.customapp.provider</string>
  <string translatable="false" name="files_directory_name">apks</string>
  <string name="custom_app_screen_title" description="Title for the custom apps (package installer) screen [CHAR LIMIT=NONE]">Custom Apps (PI) Demo</string>
  <string name="download_url" description="Download URL [CHAR LIMIT=NONE]">Download URL</string>
  <string name="app_package_name" description="Name of the package [CHAR LIMIT=NONE]">Package name</string>
  <string name="use_example_apk" description="Use example apk url [CHAR LIMIT=NONE]">Use example apk</string>
  <string name="download_apk" description="Label of the button to download the app [CHAR LIMIT=NONE]">Download apk</string>
  <string name="install_app" description="Label of the button to send the install command [CHAR LIMIT=NONE]">Install App</string>
  <string name="uninstall_app" description="Label of the button to send the uninstall command [CHAR LIMIT=NONE]">Uninstall App</string>
  <string name="send_command_title" description="Title for the section of sending install and uninstall commands [CHAR LIMIT=NONE]">Send custom app commands</string>
  <string name="download_apk_title" description="Title for the section of downloading apks [CHAR LIMIT=NONE]">Download apk file</string>
  <string name="downloaded_apks_title" description="Title for the section of displaying downloaded apks [CHAR LIMIT=NONE]">Downloaded apk files</string>
  <string name="delete_apks" description="Label of the button to delete downloaded apk files [CHAR LIMIT=NONE]">Delete all</string>
  <string name="handle_file_provider" description="Label next to the switch that toggles handling file provider within the app [CHAR LIMIT=NONE]">Handle FileProvider within the app before sending the command to AMAPI SDK</string>
  <string name="ui_stage_start_message" description="Message to be displayed when system is ready to download and fetch apk [CHAR LIMIT=NONE]">Ready to fetch apk. Provide link to proceed, or advance to the install app section.</string>
  <string name="ui_stage_downloading_file" description="Message to be displayed when system is downloading the provided file [CHAR LIMIT=NONE]">Downloading apk…</string>
  <string name="ui_stage_file_downloaded_message" description="Message to be displayed when system has downloaded the provided file [CHAR LIMIT=NONE]">APK file successfully downloaded. Issue install or uninstall app command.</string>
  <string name="ui_stage_command_sent_message" description="Message to be displayed when system has sent the command to AMAPI SDK [CHAR LIMIT=NONE]">Command has been issued successfully.</string>
  <string name="ui_stage_command_failed_message" description="Message to be displayed when system has failed to send the command to AMAPI SDK [CHAR LIMIT=NONE]">Error in action</string>
  <string name="ui_stage_command_failed_message_no_error" description="Message to be displayed when system has failed to send the command to AMAPI SDK [CHAR LIMIT=NONE]">Failed to display error, refer to logcat for details.</string>
 <string name="ui_stage_empty_url_or_package_name_message" description="Message to be shown when the user has not provided a valid URL or package name [CHAR LIMIT=NONE]">Download URL or package name is not specified!</string>
 <string name="error_package_name_not_specified" description="Message to be shown when the user has not provided a package name [CHAR LIMIT=NONE]">Package name is not specified!</string>
  <string name="error_download_failed" description="Message to be shown when the download has failed [CHAR LIMIT=NONE]">Failed to download apk!</string>
  <string name="error_command_execution_failed" description="Message to be shown when the command execution has failed [CHAR LIMIT=NONE]">Failed to execute command!</string>

  <string name="account_setup" description="Title of the button to navigate to account setup screen [CHAR LIMIT=NONE]">Account Setup</string>
  <string name="account_setup_result" description="Text view for account setup result [CHAR LIMIT=NONE]">Account Setup Result</string>
  <string name="start_account_setup_button" description="Button text for starting account setup. [CHAR LIMIT=NONE]">Start Account Setup</string>
  <string name="launch_auth_activity_button" description="Button text for launching authentication activity. [CHAR LIMIT=NONE]">Launch Auth Activity</string>
  <string name="list_account_setup_attempts_button" description="Button text for listing account setup attempts. [CHAR LIMIT=NONE]">List Account Setup Attempts</string>
  <string name="cancel_account_setup_attempt_button" description="Button text for canceling account setup attempt. [CHAR LIMIT=NONE]">Cancel Account Setup Attempt</string>
  <string name="error_no_current_attempt_auth" description="Error message when launching auth activity with no current attempt [CHAR LIMIT=NONE]">No current attempt available. Please start or list setup first.</string>
  <string name="error_no_current_attempt_cancel" description="Error message when canceling account setup with no current attempt [CHAR LIMIT=NONE]">No current attempt to cancel.</string>

  <string name="dpc_migration" description="Title of the button to navigate to DPC Migration screen [CHAR LIMIT=NONE]">DPC Migration</string>
  <string name="start_migration_button" description="Button text for starting migration. [CHAR LIMIT=NONE]">Start Migration</string>

  <string name="get_device_trust" description = "Label of the button to send request for device trust signals[CHAR LIMIT=NONE]">Get Device Trust</string>
  <string name="device_trust" description="Title of the button to navigate to Device Trust screen [CHAR LIMIT=NONE]">Device Trust</string>
  
  <string name="get_environment" description = "Label of the button to send request for get environment API[CHAR LIMIT=NONE]">Get Environment</string>
  <string name="prepare_environment" description = "Label of the button to send request for prepare environment API[CHAR LIMIT=NONE]">Prepare Environment</string>
  <string name="environment_title" description="Title of the button to navigate to Environment screen [CHAR LIMIT=NONE]">Environment</string>

  <string name="oem_system_update_screen_title" description="Title for the OEM system update screen [CHAR LIMIT=NONE]">OEM System Update Demo</string>
  <string name="api_level_change" description="Label for checkbox indicating API level change [CHAR LIMIT=NONE]">Has API level change</string>
  <string name="create_system_update" description="Button text to create a system update [CHAR LIMIT=NONE]">Create System Update</string>
  <string name="list_system_updates" description="Button text to list system updates [CHAR LIMIT=NONE]">List System Updates</string>
  <string name="get_system_update" description="Button text to get a system update [CHAR LIMIT=NONE]">Get System Update</string>
  <string name="create_oem_system_update_screen_title" description="Title for the create OEM system update screen [CHAR LIMIT=NONE]">Create OEM System Update</string>
  <string name="create_button" description="Button text to create [CHAR LIMIT=NONE]">Create</string>
  <string name="system_update_name_label" description="Label for the system update name input field [CHAR LIMIT=NONE]">System Update Name</string>
  <string name="status_label" description="Label for the status section [CHAR LIMIT=NONE]">Status:</string>
  <string name="notifications_log_label" description="Label for the notifications log section [CHAR LIMIT=NONE]">Notifications Log:</string>
  <string name="role_none" description="Label for no role selected [CHAR LIMIT=NONE]">None</string>

  <string name="getting_environment" description="Snackbar message when getting environment [CHAR LIMIT=NONE]">Getting environment…</string>
  <string name="preparing_environment" description="Snackbar message when preparing environment [CHAR LIMIT=NONE]">Preparing environment…</string>
  <string name="app_roles_title" description="Title of the button to navigate to App Roles screen [CHAR LIMIT=NONE]">App Roles</string>
</resources>
